# Makefile.d

./: .Makefile.d-init.mk  .gitattributes  .gitignore  .travis.yml  .travis.yml.bash  LICENSE  README.md  bats.mk  cljs.mk  command.mk  echo.mk  janet.mk  lua.mk  luajit.mk  luarocks.mk  ocaml.mk  path.mk  poorman.mk  procfile.mk  python.mk  qwerty-archive.mk  qwerty-command.mk  qwerty.mk  raptorjit.mk  reqd.mk  ruby.mk  todo.mk  vendor.mk  wait.mk
test/: Makefile
test/.reqd/sbin/: redis
test/cljs/: .gitignore  Makefile  deps.edn  package.json
test/misc/: Makefile
test/misc-alt/: .gitignore  Makefile
test/ocaml/: .gitignore  Makefile  dune  dune-project  hello.ml
test/python/.reqd/: .gitignore
test/python/.reqd/sbin/: redis
test/raptorjit/: Makefile
test/ruby/: .gitignore  Gemfile  Makefile
